Refactor document: Update Kubernetes.tex and literature.bib

--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -21,7 +21,19 @@
 
 \section{Einleitung}
 
+\begin{enumerate}
+	\item Bereitstellen von WebServices
+	\item Direkt auf Hardware
+	\begin{enumerate}
+		\item Probleme (Skalierbarkeit, Verfügbarkeit, etc.)
+	\end{enumerate}
+	\item Virtuelle Maschinen
+\end{enumerate}
+
 \section{Hauptteil}
+\begin{enumerate}
+	\item Nachteile verteilter Services (s. 86ff. in Schmeling_Dargatz_2022)
+\end{enumerate}
 
 \section{Fazit}
 
