--- a/document/literature.bib
+++ b/document/literature.bib
@@ -34,6 +34,22 @@
 	language = "ger",
 }
 
+@book {9783969109625, 
+	title = "Kubernetes",
+	author = "Burns, Brendan AND Hightower, Kelsey AND Beda, Joe AND Evenson, Lachlan",
+	isbn = "9783969109625",
+	year = "2023",
+	edition = "3",
+	keywords = "Google, Cloud, Docker, Container, DevOps, raspberry-pi, borg-system, continuous-delivery, VM, deplyoment, Redis, virtual-machines, Compose",
+	url = "http://www.content-select.com/index.php?id=bib_view&amp;ean=9783969109625",
+	url = "https://content-select.com/de/portal/media/view/63fefb01-1070-4dc7-8ee9-004bac1b0009",
+	publisher = "dpunkt.verlag",
+	language = "ger",
+}
+
+
+
+
 @article{merkel2014docker,
   title={Docker: lightweight linux containers for consistent development and deployment},
   author={Merkel, Dirk},
