--- a/document/literature.bib
+++ b/document/literature.bib
@@ -22,40 +22,75 @@
   year      = {2022}
 } 
 
-@book {9783960102403, 
-	title = "Verteilte Systeme mit Kubernetes entwerfen",
-	author = "Burns, Brendan",
-	isbn = "9783960102403",
-	year = "2018",
-	keywords = "Google, Cloud, pattern, Docker, Container, DevOps, Kubernetes, Microservices, containers, continous-delivery, sidecars, topz, ambassadors, adapters, faas, orchestrators, skalierbar, designing distributed systems",
-	url = "http://www.content-select.com/index.php?id=bib_view&amp;ean=9783960102403",
-	url = "https://content-select.com/de/portal/media/view/5d5fc35f-7c08-4bed-9d0c-246bb0dd2d03",
-	publisher = "O'Reilly Verlag",
-	language = "ger",
+@book{9783960102403,
+  title     = {Verteilte Systeme mit Kubernetes entwerfen},
+  author    = {Burns, Brendan},
+  isbn      = {9783960102403},
+  year      = {2018},
+  keywords  = {Google, Cloud, pattern, Docker, Container, DevOps, Kubernetes, Microservices, containers, continous-delivery, sidecars, topz, ambassadors, adapters, faas, orchestrators, skalierbar, designing distributed systems},
+  url       = {http://www.content-select.com/index.php?id=bib_view&amp;ean=9783960102403},
+  url       = {https://content-select.com/de/portal/media/view/5d5fc35f-7c08-4bed-9d0c-246bb0dd2d03},
+  publisher = {O'Reilly Verlag},
+  language  = {ger}
 }
 
-@book {9783969109625, 
-	title = "Kubernetes",
-	author = "Burns, Brendan AND Hightower, Kelsey AND Beda, Joe AND Evenson, Lachlan",
-	isbn = "9783969109625",
-	year = "2023",
-	edition = "3",
-	keywords = "Google, Cloud, Docker, Container, DevOps, raspberry-pi, borg-system, continuous-delivery, VM, deplyoment, Redis, virtual-machines, Compose",
-	url = "http://www.content-select.com/index.php?id=bib_view&amp;ean=9783969109625",
-	url = "https://content-select.com/de/portal/media/view/63fefb01-1070-4dc7-8ee9-004bac1b0009",
-	publisher = "dpunkt.verlag",
-	language = "ger",
+@book{9783969109625,
+  title     = {Kubernetes},
+  author    = {Burns, Brendan AND Hightower, Kelsey AND Beda, Joe AND Evenson, Lachlan},
+  isbn      = {9783969109625},
+  year      = {2023},
+  edition   = {3},
+  keywords  = {Google, Cloud, Docker, Container, DevOps, raspberry-pi, borg-system, continuous-delivery, VM, deplyoment, Redis, virtual-machines, Compose},
+  url       = {http://www.content-select.com/index.php?id=bib_view&amp;ean=9783969109625},
+  url       = {https://content-select.com/de/portal/media/view/63fefb01-1070-4dc7-8ee9-004bac1b0009},
+  publisher = {dpunkt.verlag},
+  language  = {ger}
 }
-
-
-
 
 @article{merkel2014docker,
-  title={Docker: lightweight linux containers for consistent development and deployment},
-  author={Merkel, Dirk},
-  journal={Linux journal},
-  volume={2014},
-  number={239},
-  pages={2},
-  year={2014}
+  title   = {Docker: lightweight linux containers for consistent development and deployment},
+  author  = {Merkel, Dirk},
+  journal = {Linux journal},
+  volume  = {2014},
+  number  = {239},
+  pages   = {2},
+  year    = {2014}
 }
+
+@inproceedings{7899247,
+  author    = {Kominos, Charalampos Gavriil and Seyvet, Nicolas and Vandikas, Konstantinos},
+  booktitle = {2017 20th Conference on Innovations in Clouds, Internet and Networks (ICIN)},
+  title     = {Bare-metal, virtual machines and containers in OpenStack},
+  year      = {2017},
+  volume    = {},
+  number    = {},
+  pages     = {36-43},
+  keywords  = {Servers;Containers;Cloud computing;Virtual machine monitors;Random access memory;Hardware;Virtualization},
+  doi       = {10.1109/ICIN.2017.7899247}
+}
+
+  @article{Bentaleb_Belloum_Sebaa_El-Maouhab_2021,
+  title   = {Containerization technologies: Taxonomies, applications and challenges},
+  volume  = {78},
+  doi     = {10.1007/s11227-021-03914-1},
+  number  = {1},
+  journal = {The Journal of Supercomputing},
+  author  = {Bentaleb, Ouafa and Belloum, Adam S. and Sebaa, Abderrazak and El-Maouhab, Aouaouche},
+  year    = {2021},
+  month   = {Jun},
+  pages   = {1144–1181}
+} 
+
+@book{kofler2021docker,
+  address      = {Bonn},
+  author       = {Kofler, Michael and Öggl, Bernd},
+  edition      = {3rd ed.},
+  howpublished = {electronic; online},
+  isbn         = {3-8362-8636-X},
+  publisher    = {Rheinwerk Verlag},
+  title        = {Docker: Das Praxisbuch für Entwickler und DevOps-Teams},
+  type         = {book},
+  year         = {2021},
+}
+
+
