--- a/document/literature.bib
+++ b/document/literature.bib
@@ -1,19 +1,3 @@
-@book{compilers2006,
-  title     = {Compilers: Principles, Techniques, and Tools},
-  author    = {Aho, Alfred V. and Lam, Monica S. and Sethi, Ravi and Ullman, Jeffrey D.},
-  publisher = {Addison-Wesley},
-  year      = {2006},
-  address   = {Boston}
-}
-
-@book{HdR1954,
-  title     = {The Lord of the Rings},
-  author    = {John R. R. Tolkien},
-  publisher = {Allen \& Unwin},
-  year      = {1954},
-  address   = {London}
-}
-
 @book{Schmeling_Dargatz_2022,
   place     = {United States},
   title     = {Kubernetes Native Development: Develop, build, deploy, and run applications on kubernetes},
@@ -92,5 +76,43 @@
   type         = {book},
   year         = {2021},
 }
+
+@Inbook{Bisong2019,
+author="Bisong, Ekaba",
+title="Containers and Google Kubernetes Engine",
+bookTitle="Building Machine Learning and Deep Learning Models on Google Cloud Platform: A Comprehensive Guide for Beginners",
+year="2019",
+publisher="Apress",
+address="Berkeley, CA",
+pages="655--670",
+isbn="978-1-4842-4470-8",
+doi="10.1007/978-1-4842-4470-8_45",
+}
+
+@INPROCEEDINGS{10408594,
+  author={Wuttke, Alexander and Hunker, Joachim and Rabe, Markus and Diepenbrock, Jan-Philipp},
+  booktitle={2023 Winter Simulation Conference (WSC)}, 
+  title={Estimating Parameters with Data Farming for Condition-Based Maintenance in a Digital Twin}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1641-1652},
+  keywords={Parameter estimation;Maintenance engineering;Generators;Data models;Digital twins;Sensors;Farming},
+  doi={10.1109/WSC60868.2023.10408594}
+}
+
+
+@INPROCEEDINGS{10408202,
+  author={Pappert, Falk Stefan and Seufferth, Daniel and Stein, Heiderose and Rose, Oliver},
+  booktitle={2023 Winter Simulation Conference (WSC)}, 
+  title={Using Kubernetes to Improve Data Farming Capabilities}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={2052-2063},
+  keywords={Containers;Farming},
+  doi={10.1109/WSC60868.2023.10408202}
+}
+
 
 
